--- a/src/css/Time.css
+++ b/src/css/Time.css
@@ -8,6 +8,7 @@
     border-radius: 4px;
     height: 40px;
     width: 250px;
+    z-index: -1;
 }
 
 @media screen and (max-width: 800px) {
